sfSandBoxCode/force-app/main/default/objects/account_phone__c/account_phone__c.object-meta.xml
<CustomObject>
    <label>account phone</label>
    <nameField>
        <displayFormat>ACC-{000000}</displayFormat>
        <label>account phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>accounts phone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>