sfSandBoxCode/force-app/main/default/objects/account_phone__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>accounts phone</relationshipLabel>
    <relationshipName>accounts_phone</relationshipName>
    <type>Lookup</type>
</CustomField>