sfSandBoxCode/force-app/main/default/objects/account_phone__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Phone</label>
    <type>Checkbox</type>
</CustomField>